# music-app

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidBridge.cpp  AudioHost.cpp  AudioHost.h  CMakeLists.txt  Envelope.cpp  Envelope.h  Instrument.cpp  Instrument.h  JavaFunctions.cpp  SineWave.cpp  SineWave.h  native-lib.cpp
app/src/main/cpp/effects/: Distortion.cpp  Distortion.h  Effect.h  Envelope.cpp  Envelope.h  LowPass.cpp  LowPass.h  Noise.cpp  Noise.h  Processable.cpp  Processable.h
app/src/main/cpp/waveforms/: Sawtooth.cpp  Sawtooth.h  Sine.cpp  Sine.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Waveform.cpp  Waveform.h
app/src/main/java/com/lukas/music/: EditVoiceFragment.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_credits.xml  fragment_edit_chord.xml  fragment_edit_effects.xml  fragment_edit_envelope.xml  fragment_edit_instrument.xml  fragment_edit_voice.xml  fragment_effect.xml  fragment_instrument.xml  fragment_instrument_list.xml  fragment_play.xml  fragment_song.xml  sample_instrument_view.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: attrs_instrument_view.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
